# electronic-systems-research-center-new

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  seed.py  seed_resources.py  vercel.json
api/: index.py
app/: __init__.py  attendance.py  auth.py  firebase.py  models.py  ordering.py  scheduling.py  uploads.py
app/routes/: __init__.py  admin.py  public.py
migrations/versions/: 333188fadcde_add_is_core_staff_to_staff.py  451c8d2d38cd_add_contactmessage_model.py  4f99053b8a08_widen_publication_title_and_link_fields.py  517a64225f9f_add_sitesettings_partner_.py  6f8203283795_add_accomplishmentreport_.py  7304a2722d75_add_image_scale_to_staff_for_photo_zoom_.py  7f44143aa33f_add_sr_code_to_ojt.py  8ff7773c02fb_add_page_type_and_embed_url_to_.py  aa527807c796_add_editable_hero_research_areas_about_.py  de6b3e2ae0c9_add_hero_image_url_to_site_settings.py  f19c5a7a54cf_restructure_learningresource_with_.py  (+2 more)
scripts/: reseed_missing.py  upload_images.py
seed_data/: accomplishment_reports.csv  dr_sang_publications.csv  research_center_highlights.csv  research_projects.csv
static/: robots.txt  sitemap.xml
templates/: accomplishments.html  accomplishments_detail.html  admin.html  appointment_calendar.html  appointment_form.html  appointment_review.html  appointment_success.html  appointments.html  base.html  center-highlights.html  index.html  project.html  project_detail.html  projects.html  publication_detail.html  publications.html  resource_detail.html  resource_page.html  resources.html  team.html
tests/: test_admin_auth.py
(+41 files in other folders)
