[project]
name = "electronic-systems-research-center-new"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "firebase-admin>=7.4.0",
    "flask>=3.1.3",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=26.0.0",
    "python-dotenv>=1.2.2",
]
