[project]
name = "electronic-systems-research-center-new"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "firebase-admin>=7.4.0",
    "flask>=3.1.3",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "google-api-python-client>=2.198.0",
    "google-auth>=2.55.1",
    "gunicorn>=26.0.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "resend>=2.32.2",
]
